[tool.poetry]
name = "optiseek"
version = "0.2.0"
description = "A collection of single objective optimization algorithms for multi-dimensional functions."
license = "MIT"
authors = ["Alex Dundore <acdundore.5@gmail.com>"]
readme = "README.md"
homepage = "https://pypi.org/project/optiseek"
documentation = "https://acdundore.github.io/optiseek/"
repository = "https://github.com/acdundore/optiseek"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
